--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 87,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns; sns.set()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import PCA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +79,7 @@
        " 'image_samples/animal_images/animal_1.jpeg']"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +105,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 200,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "immatrix = array([array(Image.open(im)) for im in imlist])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,37 +126,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 212,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shapes = [im.data.shape for im in immatrix]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([array([ 85, 135, 136, ..., 179, 169, 170], dtype=uint8),\n",
-       "       array([210, 222, 218, ...,  54,  22,  43], dtype=uint8),\n",
-       "       array([73, 64, 23, ..., 36, 27, 10], dtype=uint8),\n",
-       "       array([51, 53, 50, ..., 59, 54, 51], dtype=uint8),\n",
-       "       array([115, 103,  87, ...,  36,  65,   7], dtype=uint8),\n",
-       "       array([120,  81,  76, ...,  13,   8,   5], dtype=uint8),\n",
-       "       array([13, 21, 24, ..., 18, 22, 23], dtype=uint8),\n",
-       "       array([145, 147, 160, ...,  60,  43,  51], dtype=uint8),\n",
-       "       array([74, 83, 62, ..., 55, 38, 22], dtype=uint8),\n",
-       "       array([ 11,  22,   8, ..., 126, 117,  76], dtype=uint8)],\n",
-       "      dtype=object)"
+       "[(50400,),\n",
+       " (50625,),\n",
+       " (50358,),\n",
+       " (50220,),\n",
+       " (50400,),\n",
+       " (50625,),\n",
+       " (50451,),\n",
+       " (50625,),\n",
+       " (50325,),\n",
+       " (50562,)]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "immatrix"
+    "shapes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +174,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-80-e5afd3a79b36>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# perform PCA\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mV\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mS\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mimmean\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpca\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpca\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimmatrix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-214-e5afd3a79b36>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# perform PCA\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mV\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mS\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mimmean\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpca\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpca\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimmatrix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m~/Documents/Image_Analysis_Project/PCV/PCV/tools/pca.py\u001b[0m in \u001b[0;36mpca\u001b[0;34m(X)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;31m# get dimensions\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m     \u001b[0mnum_data\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdim\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0;31m# center data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mValueError\u001b[0m: not enough values to unpack (expected 2, got 1)"
      ]
@@ -139,6 +183,77 @@
    "source": [
     "# perform PCA\n",
     "V,S,immean = pca.pca(immatrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'JpegImageFile' object has no attribute 'data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-185-3429f4587690>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpca\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPCA\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcumsum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpca\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexplained_variance_ratio_\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mxlabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'number of components'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mylabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'cumulative explained variance'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'JpegImageFile' object has no attribute 'data'"
+     ]
+    }
+   ],
+   "source": [
+    "pca = PCA().fit(im.data)\n",
+    "plt.plot(np.cumsum(pca.explained_variance_ratio_))\n",
+    "plt.xlabel('number of components')\n",
+    "plt.ylabel('cumulative explained variance');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(224, 225)\n",
+      "(224, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "pca = PCA(2)  # project from 64 to 2 dimensions\n",
+    "projected = pca.fit_transform(im.data)\n",
+    "print(immatrix[0].data.shape)\n",
+    "print(projected.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'target'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-182-6cb298e3d3b6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m plt.scatter(projected[:, 0], projected[:, 1],\n\u001b[0;32m----> 2\u001b[0;31m             \u001b[0mc\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0medgecolor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'none'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malpha\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m             cmap=plt.cm.get_cmap('spectral', 10))\n\u001b[1;32m      4\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mxlabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'component 1'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mylabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'component 2'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'target'"
+     ]
+    }
+   ],
+   "source": [
+    "plt.scatter(projected[:, 0], projected[:, 1],\n",
+    "            c=im.target, edgecolor='none', alpha=0.5,\n",
+    "            cmap=plt.cm.get_cmap('spectral', 10))\n",
+    "plt.xlabel('component 1')\n",
+    "plt.ylabel('component 2')\n",
+    "plt.colorbar();"
    ]
   }
  ],
