created a py file for the pca notebook

--- a/kmeans_clustering.ipynb
+++ b/kmeans_clustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 63,
    "metadata": {
     "collapsed": true
    },
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([90.9, 93. , 85.2, ..., 64.2, 56.3, 45.1])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "immean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.00230727, -0.00292029, -0.00338931, ..., -0.00183725,\n",
+       "        -0.00135564, -0.00221707],\n",
+       "       [ 0.00369335,  0.0026143 ,  0.00304423, ..., -0.0032714 ,\n",
+       "        -0.00378224, -0.00250616],\n",
+       "       [-0.00029455,  0.00087838,  0.00135333, ...,  0.00097209,\n",
+       "         0.00129199,  0.00122387],\n",
+       "       ...,\n",
+       "       [ 0.00191495,  0.00325677,  0.0027272 , ...,  0.00151268,\n",
+       "        -0.00040783,  0.00031953],\n",
+       "       [-0.0012742 , -0.00185558, -0.00177602, ..., -0.00044348,\n",
+       "        -0.00073597, -0.00079033],\n",
+       "       [        nan,         nan,         nan, ...,         nan,\n",
+       "                nan,         nan]])"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "V"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,33 +107,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[145., 147., 160., ...,  62.,  43.,  49.],\n",
-       "       [210., 222., 218., ...,  54.,  22.,  45.],\n",
-       "       [ 11.,  24.,   6., ..., 126., 117.,  76.],\n",
-       "       ...,\n",
-       "       [ 69.,  76.,  60., ...,  56.,  37.,  20.],\n",
-       "       [121., 103.,  93., ...,  36.,  65.,   7.],\n",
-       "       [ 74.,  65.,  26., ...,  35.,  28.,  10.]], dtype=float32)"
+       "array([145., 147., 160., ...,  62.,  43.,  49.], dtype=float32)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "immatrix"
+    "immatrix[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 69,
    "metadata": {
     "collapsed": true
    },
