--- a/pca_sample_images.ipynb
+++ b/pca_sample_images.ipynb
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -804,6 +804,28 @@
    "source": [
     "# perform PCA\n",
     "V,S,immean = pca.pca(immatrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([46227.40066746, 28622.61703946, 25086.70370274, 22232.1864899 ,\n",
+       "       20500.87148579, 18452.03236396, 18272.00204805, 17515.47895025,\n",
+       "       15461.90830762,            nan])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "S"
    ]
   },
   {
