--- a/pca_sample_images_extended.ipynb
+++ b/pca_sample_images_extended.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 84,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 85,
    "metadata": {
     "collapsed": true
    },
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 86,
    "metadata": {
     "collapsed": true
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
        " 'image_sample_copy/animal_images/animal_1.jpeg']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 88,
    "metadata": {
     "collapsed": true
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 89,
    "metadata": {
     "collapsed": true
    },
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +589,7 @@
        "         [126., 117.,  76.]]])]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 91,
    "metadata": {
     "collapsed": true
    },
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +629,7 @@
        " (159, 318, 3)]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 93,
    "metadata": {
     "collapsed": true
    },
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
        "(200.8, 255.4)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,10 +671,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 97,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -688,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 98,
    "metadata": {
     "collapsed": true
    },
@@ -699,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +715,7 @@
        " 'image_sample_copy/animal_images/animal_9_resized.jpg']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,18 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "immatrix = array([array(Image.open(im)) for im in imlist_resized])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 103,
    "metadata": {
     "collapsed": true
    },
@@ -760,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +765,7 @@
        " (135675,)]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,27 +775,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 28,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/jeffreysternberg/Documents/Image_Analysis_Project/PCV/PCV/tools/pca.py:24: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  S = sqrt(e)[::-1] # reverse since eigenvalues are in increasing order\n"
-     ]
-    }
-   ],
    "source": [
-    "# perform PCA\n",
-    "V,S,immean = pca.pca(immatrix)"
+    "PCA Function Code - Unpacked"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +802,7 @@
        "(10, 135675)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -838,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -859,21 +834,21 @@
        "        -3.510e+01]])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# center data\n",
-    "mean_X = immatrix.mean(axis=0)\n",
-    "X = immatrix - mean_X\n",
+    "immean = immatrix.mean(axis=0)\n",
+    "X = immatrix - immean\n",
     "X"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +896,7 @@
        "         4.24473971e+08]])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +940,7 @@
        "         -0.46331433,  0.54290844, -0.11982155, -0.13562293,  0.17182081]]))"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -977,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +973,7 @@
        "        -8.49313805e+01, -6.26677510e+01, -1.02489605e+02]])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -1031,7 +1006,7 @@
        "         2.90984382e-14,  1.95399252e-14,  1.62092562e-14]])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1043,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -1062,7 +1037,7 @@
        "       15461.90830762,            nan])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1074,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -1107,7 +1082,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x62ccee5c0>"
+       "<matplotlib.figure.Figure at 0x632aaa0b8>"
       ]
      },
      "metadata": {},
@@ -1129,12 +1104,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
     "# save mean and principal components\n",
-    "f = open('sample_pca_modes.pkl', 'wb')\n",
+    "f = open('sample_pca_modes_altered.pkl', 'wb')\n",
     "pickle.dump(immean,f)\n",
     "pickle.dump(V,f)\n",
     "f.close()"
