continued experimentng in different notebooks

--- a/pca_sample_images_extended.ipynb
+++ b/pca_sample_images_extended.ipynb
@@ -1049,9 +1049,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAHwAAACGCAYAAAAfF+7BAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAABxFJREFUeJztnUGMXVUZx39/QSCpiQy2CyNW2kio\nJTG2TEwTEiBRAVm0JJo4TUypqWlA0ERXGhYmdaHAgoSIgTFOIi5apKsxkRC0GDa2dCYqtDXAtAZt\n2qTF1m5qqq2fi3NGL495827vO+/dC9/3S17m3XPuufN1fnNn7px+3zkyMwI/fKDtAILxEsKdEcKd\nEcKdEcKdEcKdMVC4pBlJpyQd6tMvSU9IWpD0qqSNlb77JL2ZX/eVDDxoiJkt+wJuAzYCh/r03wM8\nDwjYBBzI7dcBx/LHifx+YtDni9doXwPvcDN7GTizzClbgGcssR+4VtJHgbuAF83sjJmdBV4E7m7w\nPRkUpMTv8I8Bf6scH89t/dqDFrmywDW0RJst0/7uC0g7gZ0AK1asuGXdunUFwnr/Mj8//7aZrWoy\ntoTw48DHK8fXAydy+x097b9b6gJmNg1MA0xOTtrc3FyBsN6/SHqr6dgSP9JngW35aX0TcM7MTgIv\nAHdKmpA0AdyZ24IWGXiHS9pNulNXSjoOfB/4IICZPQX8mvSkvgCcB76W+85I+gFwMF9ql5kt9/AX\njIGBws1s64B+Ax7s0zcDzDQLLRgFMdPmjBDujBDujBDujBDujBDujBDujBDujBDujBDujBDujBDu\njBDujBDujBDujBDujFrCJd0t6fVcbPDdJfofl/TH/HpD0j8qfZcqfbMlgw8unzopTlcATwJfICUm\nHpQ0a2ZHFs8xs29Xzv8msKFyiX+a2WfKhRwMQ507/LPAgpkdM7N/AXtIxQf92ArsLhFcUJ46wmsX\nFEj6BLAG2FdpvkbSnKT9ku5tHGlQhDp56bULCoApYK+ZXaq0rTazE5LWAvskvWZmR9/xCSqFCKtX\nr64RUtCUOnd4v0KDpZii58e5mZ3IH4+RChE29A4ys2kzmzSzyVWrGhVUBDWpI/wgcKOkNZKuIkl9\n19O2pJtIVaK/r7RNSLo6v18J3Aoc6R0bjI86eekXJT1Eqhq5Apgxs8OSdgFzZrYofyuwJ+epL/Ip\n4GlJ/yF9c/2o+nQfjB+900/7RG3ZYCTNm9lkk7Ex0+aMEO6MEO6MEO6MEO6MEO6MEO6MEO6MEO6M\nEO6MEO6MEO6MEO6MEO6MEO6MEO6MUoUI2yWdrhQcfL3SF7sidIgihQiZZ83soZ6x15HWZp0kZbrO\n57Fni0QfXDajKESoErsidIyShQhfypvc7JW0mNZca6yknblYYe706dM1Qw+aUEd4nUKEXwE3mNmn\ngd8AP7+MsZGXPkaKFCKY2d/N7EI+/ClwS92xwXgpUoiQdzFaZDPw5/w+dkXoGKUKEb4laTNwkbTl\n1fY8NnZF6BhRiPAeJAoRgtqEcGeEcGeEcGeEcGeEcGeEcGeEcGeEcGeEcGeEcGeEcGeEcGeEcGeE\ncGeUykv/jqQjOYnxt3lV5cW+WCC/Q5TKS/8DMGlm5yU9ADwKfCX3xQL5HaJIXrqZvWRm5/PhflKy\nYtBBii6Qn9kBPF85jgXyO0TRBfIlfZVUVnR7pTkWyO8QxRbIl/R54GFgcyVHPRbI7xil8tI3AE+T\nZJ+qtMcC+R2jVF76Y8CHgOckAfzVzDYTC+R3jshLfw8SeelBbUK4M0K4M0K4M0K4M0K4M0K4M0K4\nM0K4M0K4M0K4M0K4M0K4M0K4M0K4M0K4M0oVIlwt6dncf0DSDZW+7+X21yXdVS70oAkDhVcKEb4I\nrAe2Slrfc9oO4KyZfRJ4HHgkj11PyoG7mbRO+k/y9YKWKLVA/hb+v2T2XuBzSsltW4A9ZnbBzP4C\nLOTrBS1RqhDhf+eY2UXgHPCRmmODMVKqEKHfObWKGKqFCMAFSYdqxDVOVgJvtx1EhZuaDqwjvE4h\nwuI5xyVdCXyYtIx2rSIGM5sGpgEkzTXNyBwVXYtJUuO03iKFCPl4cYuqLwP7LOU/zwJT+Sl+DXAj\n8ErTYIPhKVWI8DPgF5IWSHf2VB57WNIvSdUmF4EHzezSiP4tQQ06V4ggaWf+Ed8ZuhbTMPF0Tngw\nWmJq1RmtCR9murbFmPrusTqCWGYkner3J6oST+RYX5W0sdaFzWzsL9LD31FgLXAV8Cdgfc853wCe\nyu+nSHubth3TduDHY/oa3QZsBA716b+HtNKGgE3AgTrXbesOH2a6ts2YxoaZvUz6i6cfW4BnLLEf\nuLZn/7glaUv4MNO1bcYES++x2gaNpq3bEj7MdO2oGGaP1TZo9PVpS/jlTNfSM13bWkzWf4/VNmi0\nr2tbwoeZrm0tpmX2WG2DWWBbflrfBJwzs5MDR7XxlF55ynyD9GT8cG7bRVoYCOAa4DnS/6G/Aqzt\nQEw/BA6TnuBfAtaNMJbdwEng36S7eQdwP3B/7hcpMeUo8BppJcyB142ZNmfETJszQrgzQrgzQrgz\nQrgzQrgzQrgzQrgz/guFbnf6atdINgAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x620629470>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "ename": "ValueError",
      "evalue": "Floating point image RGB values must be in the 0..1 range.",
@@ -1082,7 +1092,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x632aaa0b8>"
+       "<matplotlib.figure.Figure at 0x620e78860>"
       ]
      },
      "metadata": {},
@@ -1104,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
