--- a/resize_images_script.ipynb
+++ b/resize_images_script.ipynb
@@ -7088,36 +7088,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "imlist_resized = glob.glob(\"image_samples_copy/animal_images/*.jpg\")"
+    "imlist_resized = glob.glob(\"image_samples_resized/*.jpg\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['image_sample_copy/animal_images/animal_7_resized.jpg',\n",
-       " 'image_sample_copy/animal_images/animal_2_resized.jpg',\n",
-       " 'image_sample_copy/animal_images/animal_1_resized.jpg',\n",
-       " 'image_sample_copy/animal_images/animal_8_resized.jpg',\n",
-       " 'image_sample_copy/animal_images/animal_4_resized.jpg',\n",
-       " 'image_sample_copy/animal_images/animal_3_resized.jpg',\n",
-       " 'image_sample_copy/animal_images/animal_10_resized.jpg',\n",
-       " 'image_sample_copy/animal_images/animal_6_resized.jpg',\n",
-       " 'image_sample_copy/animal_images/animal_5_resized.jpg',\n",
-       " 'image_sample_copy/animal_images/animal_9_resized.jpg']"
+       "['image_samples_resized/urban_w_1_resized.jpg',\n",
+       " 'image_samples_resized/animal_7_resized.jpg',\n",
+       " 'image_samples_resized/promo_9_resized.jpg',\n",
+       " 'image_samples_resized/object_7_resized.jpg',\n",
+       " 'image_samples_resized/meme_7_resized.jpg',\n",
+       " 'image_samples_resized/building_6_resized.jpg',\n",
+       " 'image_samples_resized/quote_5_resized.jpg',\n",
+       " 'image_samples_resized/candid_8_resized.jpg',\n",
+       " 'image_samples_resized/selfie_1_resized.jpg',\n",
+       " 'image_samples_resized/art_4_resized.jpg',\n",
+       " 'image_samples_resized/landscape_w_5_resized.jpg',\n",
+       " 'image_samples_resized/food_4_resized.jpg',\n",
+       " 'image_samples_resized/body_6_resized.jpg',\n",
+       " 'image_samples_resized/selfie_8_resized.jpg',\n",
+       " 'image_samples_resized/candid_1_resized.jpg',\n",
+       " 'image_samples_resized/urban_wo_4_resized.jpg',\n",
+       " 'image_samples_resized/group_5_resized.jpg',\n",
+       " 'image_samples_resized/art_1_resized.jpg',\n",
+       " 'image_samples_resized/promo_5_resized.jpg',\n",
+       " 'image_samples_resized/urban_wo_1_resized.jpg',\n",
+       " 'image_samples_resized/candid_4_resized.jpg',\n",
+       " 'image_samples_resized/quote_9_resized.jpg',\n",
+       " 'image_samples_resized/body_3_resized.jpg',\n",
+       " 'image_samples_resized/food_1_resized.jpg',\n",
+       " 'image_samples_resized/object_2_resized.jpg',\n",
+       " 'image_samples_resized/meme_2_resized.jpg',\n",
+       " 'image_samples_resized/landscape_wo_2_resized.jpg',\n",
+       " 'image_samples_resized/animal_2_resized.jpg',\n",
+       " 'image_samples_resized/art_8_resized.jpg',\n",
+       " 'image_samples_resized/urban_w_4_resized.jpg',\n",
+       " 'image_samples_resized/selfie_4_resized.jpg',\n",
+       " 'image_samples_resized/group_9_resized.jpg',\n",
+       " 'image_samples_resized/food_8_resized.jpg',\n",
+       " 'image_samples_resized/building_3_resized.jpg',\n",
+       " 'image_samples_resized/body_9_resized.jpg',\n",
+       " 'image_samples_resized/selfie_7_resized.jpg',\n",
+       " 'image_samples_resized/quote_3_resized.jpg',\n",
+       " 'image_samples_resized/animal_1_resized.jpg',\n",
+       " 'image_samples_resized/object_1_resized.jpg',\n",
+       " 'image_samples_resized/meme_1_resized.jpg',\n",
+       " 'image_samples_resized/landscape_wo_1_resized.jpg',\n",
+       " 'image_samples_resized/food_2_resized.jpg',\n",
+       " 'image_samples_resized/building_9_resized.jpg',\n",
+       " 'image_samples_resized/landscape_w_3_resized.jpg',\n",
+       " 'image_samples_resized/candid_7_resized.jpg',\n",
+       " 'image_samples_resized/urban_wo_2_resized.jpg',\n",
+       " 'image_samples_resized/group_3_resized.jpg',\n",
+       " 'image_samples_resized/art_2_resized.jpg',\n",
+       " 'image_samples_resized/promo_6_resized.jpg',\n",
+       " 'image_samples_resized/animal_8_resized.jpg',\n",
+       " 'image_samples_resized/meme_8_resized.jpg',\n",
+       " 'image_samples_resized/object_8_resized.jpg',\n",
+       " 'image_samples_resized/group_6_resized.jpg',\n",
+       " 'image_samples_resized/candid_2_resized.jpg',\n",
+       " 'image_samples_resized/body_5_resized.jpg',\n",
+       " 'image_samples_resized/food_7_resized.jpg',\n",
+       " 'image_samples_resized/art_7_resized.jpg',\n",
+       " 'image_samples_resized/selfie_2_resized.jpg',\n",
+       " 'image_samples_resized/quote_6_resized.jpg',\n",
+       " 'image_samples_resized/building_5_resized.jpg',\n",
+       " 'image_samples_resized/landscape_wo_4_resized.jpg',\n",
+       " 'image_samples_resized/object_4_resized.jpg',\n",
+       " 'image_samples_resized/meme_4_resized.jpg',\n",
+       " 'image_samples_resized/urban_w_2_resized.jpg',\n",
+       " 'image_samples_resized/animal_4_resized.jpg',\n",
+       " 'image_samples_resized/group_8_resized.jpg',\n",
+       " 'image_samples_resized/candid_10_resized.jpg',\n",
+       " 'image_samples_resized/selfie_5_resized.jpg',\n",
+       " 'image_samples_resized/building_2_resized.jpg',\n",
+       " 'image_samples_resized/food_9_resized.jpg',\n",
+       " 'image_samples_resized/landscape_wo_3_resized.jpg',\n",
+       " 'image_samples_resized/meme_3_resized.jpg',\n",
+       " 'image_samples_resized/object_3_resized.jpg',\n",
+       " 'image_samples_resized/urban_w_5_resized.jpg',\n",
+       " 'image_samples_resized/art_9_resized.jpg',\n",
+       " 'image_samples_resized/meme_10_resized.jpg',\n",
+       " 'image_samples_resized/animal_3_resized.jpg',\n",
+       " 'image_samples_resized/quote_8_resized.jpg',\n",
+       " 'image_samples_resized/candid_5_resized.jpg',\n",
+       " 'image_samples_resized/group_1_resized.jpg',\n",
+       " 'image_samples_resized/food_10_resized.jpg',\n",
+       " 'image_samples_resized/landscape_w_1_resized.jpg',\n",
+       " 'image_samples_resized/body_2_resized.jpg',\n",
+       " 'image_samples_resized/promo_10_resized.jpg',\n",
+       " 'image_samples_resized/promo_4_resized.jpg',\n",
+       " 'image_samples_resized/body_7_resized.jpg',\n",
+       " 'image_samples_resized/food_5_resized.jpg',\n",
+       " 'image_samples_resized/landscape_w_4_resized.jpg',\n",
+       " 'image_samples_resized/group_4_resized.jpg',\n",
+       " 'image_samples_resized/urban_wo_5_resized.jpg',\n",
+       " 'image_samples_resized/selfie_9_resized.jpg',\n",
+       " 'image_samples_resized/art_5_resized.jpg',\n",
+       " 'image_samples_resized/promo_1_resized.jpg',\n",
+       " 'image_samples_resized/building_7_resized.jpg',\n",
+       " 'image_samples_resized/candid_9_resized.jpg',\n",
+       " 'image_samples_resized/quote_4_resized.jpg',\n",
+       " 'image_samples_resized/animal_10_resized.jpg',\n",
+       " 'image_samples_resized/promo_8_resized.jpg',\n",
+       " 'image_samples_resized/animal_6_resized.jpg',\n",
+       " 'image_samples_resized/meme_6_resized.jpg',\n",
+       " 'image_samples_resized/object_6_resized.jpg',\n",
+       " 'image_samples_resized/meme_5_resized.jpg',\n",
+       " 'image_samples_resized/object_5_resized.jpg',\n",
+       " 'image_samples_resized/landscape_wo_5_resized.jpg',\n",
+       " 'image_samples_resized/animal_5_resized.jpg',\n",
+       " 'image_samples_resized/selfie_10_resized.jpg',\n",
+       " 'image_samples_resized/urban_w_3_resized.jpg',\n",
+       " 'image_samples_resized/quote_7_resized.jpg',\n",
+       " 'image_samples_resized/selfie_3_resized.jpg',\n",
+       " 'image_samples_resized/building_4_resized.jpg',\n",
+       " 'image_samples_resized/art_10_resized.jpg',\n",
+       " 'image_samples_resized/art_6_resized.jpg',\n",
+       " 'image_samples_resized/promo_2_resized.jpg',\n",
+       " 'image_samples_resized/candid_3_resized.jpg',\n",
+       " 'image_samples_resized/group_7_resized.jpg',\n",
+       " 'image_samples_resized/food_6_resized.jpg',\n",
+       " 'image_samples_resized/body_4_resized.jpg',\n",
+       " 'image_samples_resized/animal_9_resized.jpg',\n",
+       " 'image_samples_resized/promo_7_resized.jpg',\n",
+       " 'image_samples_resized/art_3_resized.jpg',\n",
+       " 'image_samples_resized/object_9_resized.jpg',\n",
+       " 'image_samples_resized/meme_9_resized.jpg',\n",
+       " 'image_samples_resized/quote_10_resized.jpg',\n",
+       " 'image_samples_resized/landscape_w_2_resized.jpg',\n",
+       " 'image_samples_resized/building_8_resized.jpg',\n",
+       " 'image_samples_resized/body_1_resized.jpg',\n",
+       " 'image_samples_resized/food_3_resized.jpg',\n",
+       " 'image_samples_resized/group_2_resized.jpg',\n",
+       " 'image_samples_resized/urban_wo_3_resized.jpg',\n",
+       " 'image_samples_resized/body_10_resized.jpg',\n",
+       " 'image_samples_resized/candid_6_resized.jpg',\n",
+       " 'image_samples_resized/object_10_resized.jpg',\n",
+       " 'image_samples_resized/building_10_resized.jpg',\n",
+       " 'image_samples_resized/group_10_resized.jpg',\n",
+       " 'image_samples_resized/body_8_resized.jpg',\n",
+       " 'image_samples_resized/building_1_resized.jpg',\n",
+       " 'image_samples_resized/quote_2_resized.jpg',\n",
+       " 'image_samples_resized/selfie_6_resized.jpg']"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7128,7 +7256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -7140,7 +7268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -7151,25 +7279,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(135675,),\n",
-       " (135675,),\n",
-       " (135675,),\n",
-       " (135675,),\n",
-       " (135675,),\n",
-       " (135675,),\n",
-       " (135675,),\n",
-       " (135675,),\n",
-       " (135675,),\n",
-       " (135675,)]"
+       "[(154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,),\n",
+       " (154869,)]"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
